to fix alignment of label and fieldset

--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,7 @@ body{
   font-family: Inter, sans-serif;
   background-color: #F5F7FB;
   position: relative;
-  margin: 50px;
+  /* margin: 50px; */
   min-height: 100vh;
 }
 
@@ -94,6 +94,8 @@ div#root{
   position: fixed;
   top:-500px;
   right:-350px;
+  z-index: -1;
+  pointer-events: none;
 }
 
 .bot-yellow-blob{
@@ -103,6 +105,8 @@ div#root{
   bottom:-500px;
   left:-350px; 
   filter: invert(55%) sepia(100%) saturate(5000%) hue-rotate(180deg);
+  z-index: -1;
+  pointer-events: none;
 }
 
 .first-page-title{
@@ -142,21 +146,44 @@ legend{
 
 fieldset {
   border: none;
-  height: 100px;     
-  margin-top: 15px;        
-  padding: 0;  
-  border-bottom: 1px solid #DBDEF0;     
+  margin: 15px;        
+  padding-bottom: 15px;  
+  border-bottom: 1px solid #DBDEF0;   
+  display: flex;  
 }
 
 input[type="radio"] {
   display: none;
 }
 
+form{
+  display: flex;
+  flex-direction: column;
+  min-width: 100vh;
+  flex-wrap: nowrap;
+}
+
 label{
-  padding: 5px 10px;
+  padding: 8px 15px;
   border: 1px solid #293264;
   color: #293264;
-  margin: 30px 10px;
+  margin: 0px 10px;
   border-radius: 10px;
   font-size: 0.9rem;
+  user-select: none;
+  /* display: inline-block; */
+  /* width: 100%; */
+}
+
+label:has(input:checked) {
+  background-color: #D6DBF5;
+}
+
+.submit-btn{
+  padding: 15px 30px;
+  border-radius: 15px;
+  border: none;
+  background-color: #4D5B9E;
+  color: #F5F7FB;
+  margin: 40px auto;
 }
